# Xsens-Real-time-Visualization

./: CMakeLists.txt  README.md  main.cpp
include/: settings.h  simple_skeleton_model.h  util.h
